# REST-service

./: Dockerfile  README.md  pyproject.toml
source/: __init__.py  config.py  database.py  database_set.py  main.py  model.py  test_service.py  users.db
source/data/: users.db
source/database/: __init__.py  config.py  database.py  database_set.py  users_data.py
source/tests/: test_service.py
