[tool.poetry]
name = "rest-service"
version = "0.1.0"
description = ""
authors = ["Your-vo1d <my.vo1d.edge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
requests = "^2.32.2"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pytest = "^8.2.1"
apscheduler = "^3.10.4"
asyncio = "^3.4.3"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
